# code-intel

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  README.md  TESTING.md  TEST_GUIDE.md  agent-integrations.md  api-test.http  code-intel-nxt-prompts.md  demo.sh  dockerignore  inspect_tree_sitter_names.py  inspect_tree_sitter_walk.py  install.sh  mcp.json  mcp.md  podman-compose.yml  promptfooconfig.yaml  purge.sh  pyproject.toml  test.env  tmp_inspect_tree.py  tmp_walk_tree.py
.github/workflows/: ci.yml
code_intel/: __init__.py  agent_tools.py  client.py  settings.py
code_intel/api/: server.py
code_intel/cli/: main.py
code_intel/core/: dataflow.py  ingestion.py  storage.py  udf.py  workspace.py
code_intel/lang/: cobol_handler.py  cs_handler.py  delphi_handler.py  go_handler.py  java_handler.py  python_handler.py  ts_handler.py
docs/: MATURITY_EVALUATION.md  advanced_optimization_prompts.md  agent-integrations.md  blog-tutorial.md  client_usage_guide.md  code-intel-ai-review-results.md  code-intel-design.md  code-intel-nxt-prompts.md  code-intel-nxt.md  conde-intel-nxt-prompts.md  configuration.md  demo_guide.md  disk_usage_optimization.md  engine_benchmark_results.md  grafana_dashboard.json  how-code-intel-is-different.md  mcp-ui-foundations.md  tutorial.md  use_cases_guide.md
docs/adr/: 0001-unified-data-plane.md
docs/operations/: graph-hygiene.md
docs/schema/: git_dag_schema.yaml
examples/: README.md  agent_demo.py  dead_code_reaper.py  expected_output.md
examples/csharp/: Program.cs
examples/java/: HelloWorld.java
examples/python/: app.py  test_app.py
migrations/: env.py  script.py.mako
migrations/versions/: 001_initial.py  002_derived_facts.py  003_extractor_versioning.py  004_llm_artifacts.py  005_graph_read_model.py
prompts/: deepseek_coder.txt  default.txt  nuextract.txt  phi3_mini.txt
scripts/: compare_legacy_vs_topo.py  evaluate_graph_engines.py  export_postgres_to_jsonl.py  import_jsonl_to_engine.py  migrate.sh  rebuild_graph_index.py  setup-agent.sh  verify_pkg.py
src/: agent_tools.py  agents.py  mcp_server.py  settings.py
src/analytics/: cochange_model.py  predictor.py  test_mapper.py
src/api/: server.py
src/cache/: cache_bootstrap.py  cdc_listener.py  memory_cache.py
src/cli/: main.py
src/core/: dataflow.py  git_handler.py  ingestion.py  models.py  rules.py  storage.py  udf.py  workspace.py
src/lang/: cobol_handler.py  cs_handler.py  delphi_handler.py  go_handler.py  java_handler.py  python_handler.py  ts_handler.py
src/mcp/: server.py
src/semantic/: indexer.py  search.py
src/storage/: bitemporal_adapter.py  graph_engine.py
src/utils/: traceability.py
src/worker/: tasks.py
templates/: agent_instructions.md  claude_config.json  cursor_rules.json
tests/: run-tests.md  test-stream.py  test_bitemporal_adapter.py  test_cache_layer.py  test_confidence.py  test_cs_handler.py  test_export_setup.py  test_graph_engine_benchmark.py  test_handlers.py  test_requirements_pydantic.py  test_semantic.py  test_workspace.py
tests/golden/go/: main.go
tests/golden/python/: api.py
tests/golden/ts/: repository.ts
tests/performance/: stress_run.py
ui/: package-lock.json  package.json  tsconfig.app.json
ui/src/: App.tsx  GraphExplorer.tsx  index.css
ui/src/store/: workspaceStore.ts
(+1 files in other folders)
