[project]
name = "code-intel"
version = "0.1.0"
description = "Production Code Intelligence Platform (ADR-002) with PostgreSQL, Redis, async workers"
authors = [{ name = "Your Team", email = "team@example.com" }]
dependencies = [
    "ollama>=0.3.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "typer>=0.12.0",
    "mcp>=0.1.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-language-pack>=1.0.0",
    "requests>=2.32.0",
    "pydantic>=2.9.0",
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "rq>=1.15.0",
    "alembic>=1.13.0",
    "gitpython>=3.1.0",
    "psycopg2-binary>=2.9.0",      # for Alembic
]
requires-python = ">=3.11"
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
