[project]
name = "code-intel"
version = "0.1.0"
description = "Production Code Intelligence Platform (ADR-002) with PostgreSQL, Redis, async workers"
authors = [{ name = "Your Team", email = "team@example.com" }]
dependencies = [
    "ollama>=0.3.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "typer>=0.12.0",
    "mcp>=1.28.1",
    "tree-sitter>=0.20.0",
    "tree-sitter-language-pack>=1.0.0",
    "requests>=2.32.0",
    "pydantic>=2.9.0",
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "rq>=1.15.0",
    "alembic>=1.13.0",
    "gitpython>=3.1.0",
    "psycopg2-binary>=2.9.0",
    "aiosqlite>=0.22.1",
    "prometheus-client>=0.25.0",
    "temporalio>=1.6.0",
    "httpx>=0.27.0",
    "json-repair>=0.61.2",
]
requires-python = ">=3.11"
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["code_intel"]

[project.scripts]
code-intel = "code_intel.cli.main:app"
code-intel-mcp = "code_intel.mcp.server:run_mcp"

[project.optional-dependencies]
# Semantic search depends on Torch and Faiss (Heavy: ~2.5GB with CPU torch)
# We use 'txtai' instead of 'txtai[pipeline]' to avoid heavy C++ build dependencies like llama-cpp-python.
semantic = [
    "txtai>=9.11.0",
    "faiss-cpu>=1.14.3",
]
# Agents and Google Gemini support (Medium: ~500MB)
agents = [
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langgraph>=0.2.0",
    "google-generativeai>=0.8.0",
    "PyGithub>=2.3.0",
    "scikit-learn>=1.5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.15.20",
    "json-repair>=0.61.2",
]

[tool.uv]
managed = true
package = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:The default datetime adapter is deprecated:DeprecationWarning:txtai.database.rdbms",
]
